--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "license": "MIT",
   "dependencies": {
     "babel-cli": "^6.26.0",
+    "bcrypt": "^3.0.6",
     "express": "^4.17.1",
     "mongoose": "^5.6.1"
   },
