--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
   "dependencies": {
     "babel-cli": "^6.26.0",
     "bcrypt": "^3.0.6",
+    "cookie-parser": "^1.4.4",
     "express": "^4.17.1",
+    "express-session": "^1.16.2",
     "mongoose": "^5.6.1"
   },
   "devDependencies": {
